--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Wails Build
-        uses: wailsapp/github-action@v2
+        uses: The-Egg-Corp/wails-build-action@v1.4
         with:
           platform: windows/amd64
           skipFrontend: false
