--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,18 +16,11 @@ jobs:
         uses: The-Egg-Corp/wails-build-action@v1.4
         with:
           build: true
-          build-platform: windows/amd64
+          build-platform: windows/amd64, windows/386
           wails-version: v2.10.1
           go-version: 1.21
           node-version: 18
           
-      - name: Confirm Executable Output
-        run: |
-          dir build\bin
-          if (!(Test-Path "build\bin\superglide-overlay.exe")) {
-            throw "Executable not found!"
-          }
-
       - name: Zip Source Code
         run: |
           git archive -o source.zip HEAD
@@ -35,9 +28,10 @@ jobs:
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ github.run_number }}
-          name: Release v${{ github.run_number }}
+          tag_name: v1.${{ github.run_number }}
+          name: Release v1.${{ github.run_number }}
           files: |
+            build/bin/superglide-overlay.exe
             build/bin/superglide-overlay.exe
             source.zip
         env:
