--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Rename executables
         run: |
-          rename-item build\bin\superglide-overlay_windows_amd64.exe superglide-win64.exe
-          rename-item build\bin\superglide-overlay_windows_386.exe superglide-win32.exe
+          rename-item build\bin\superglide-overlay-amd64.exe superglide-win64.exe
+          rename-item build\bin\superglide-overlay.exe superglide-win32.exe
 
       - name: Zip source code
         run: git archive -o source.zip HEAD
